--- a/administrator/templates/isis/less/blocks/_chzn-override.less
+++ b/administrator/templates/isis/less/blocks/_chzn-override.less
@@ -4,9 +4,13 @@
     }
 }
 
+// Fluid width
 .control-group .chzn-container {
     width: 100% !important;
     max-width: 220px; 
+    .chzn-choices .search-field input { // Fix for #13594
+        width: 100% !important; 
+    }
 }
 
 .chzn-container-single {
@@ -191,3 +195,4 @@
 	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
 	color: #ffffff;
 }
+
